fetch quotes test

--- a/package.json
+++ b/package.json
@@ -24,5 +24,7 @@
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1"
   },
-  "dependencies": {}
+  "dependencies": {
+    "node-fetch": "^2.6.1"
+  }
 }
